# DoodleMatcher

./: .gitignore  README.md  app.json  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/constants/: animals_list.py
backend/models/: search.py
backend/routes/: health.py  populate_qdrant.py  search.py  search_doodle.py
backend/schemas/: search.py
backend/scripts/: populate_qdrant.py  test_embedding.py  verify_onnx_clip.py
backend/services/: clip_service.py  qdrant_service.py  unsplash_service.py
backend/utils/: exceptions.py  logger.py
mobile/: .env.example  app.json  package-lock.json  package.json  tailwind.config.js
mobile/app/(tabs)/: _layout.tsx  history.tsx  index.tsx
mobile/components/: CanvasComponent.tsx  DrawCanvas.tsx
mobile/components/canvas/: ActionButton.tsx  CanvasComponent.tsx  DrawingCanvas.tsx  SketchArea.tsx
mobile/components/history/: DrawingHistory.tsx
mobile/components/results/: ResultCard.tsx  Results.tsx
mobile/constants/: theme.ts
mobile/hooks/: useDrawing.tsx
mobile/screens/: DrawScreen.tsx  HistoryScreen.tsx
mobile/types/: canvas.ts  history.ts
